src/tests/functionality/assignment_6_advanced_features/invalid_semantic/03_mandatory_struct_invalid_member.c
#include <stdio.h>

struct Point {
    int x;
    int y;
};

int main() {
    struct Point p;
    p.z = 5;
    return 0;
}